<resources>
    <string name="app_name">Brent</string>
    <string name="settings">Settings</string>
    <string name="banner">Banner</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="displayName">Display Name</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="haveAccount">Have an account? Sign In</string>
    <string name="dontHaveAccount">Don’t have an account? Sign Up</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="auth_signup">Sign up</string>
    <string name="bikes">Bikes</string>
    <string name="tours">Tours</string>
    <string name="routes">Routes</string>
    <string name="toursText">Tours</string>
    <string name="routesText">Routes</string>
    <string name="profileText">Profile page</string>
    <string name="cartText">Welcome to Cart page!</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="card_bike">CardBike</string>
    <string name="booking">Browse our</string>
    <string name="explore">Explore</string>
    <string name="full_name">Full Name</string>
    <string name="bike">Bikes</string>
    <string name="user_bookings">Your Bookings</string>
    <string name="forgot_password">Reset Password</string>
</resources>
